[package]
name = "alchemy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "alchemy"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
clap = { version = "4.5.4", features = ["derive"] }
lambda_calculus = {git = "https://github.com/ljedrz/lambda_calculus"}
rand = "0.8"
rand_chacha = "0.3.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"



